fix: table responsiveness on small screens

--- a/apps/convelio/src/app/modules/user-list/user-list.component.scss
+++ b/apps/convelio/src/app/modules/user-list/user-list.component.scss
@@ -106,4 +106,10 @@
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .table-container {
+    flex-wrap: wrap;
+  }
+}
+
 
